--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,17 @@
 @import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+@layer base {
+    body {
+        transition: all 1s ease
+    }
+    body {
+      @apply bg-gray-100 text-gray-800;
+    }
+  
+  
+    .dark body {
+      @apply bg-black text-gray-200;
+    }
+  }
